// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid /> <GifGrid /> funciona correctamente 1`] = `
<Fragment>
  <h3
    className="animate_animated animate__fadeIn"
  >
    Naruto
  </h3>
  <p
    className="animate_animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en <GifGrid /> should change the snapshot when useFetchGifs is executed 1`] = `
<Fragment>
  <h3
    className="animate_animated animate__fadeIn"
  >
    Naruto
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="ABC Title"
      url="https://google.com"
    />
  </div>
</Fragment>
`;
